--- a/TaxNova/.gitignore
+++ b/TaxNova/.gitignore
@@ -70,7 +70,7 @@ coverage/
 ########################################################################
 # Streamlit
 ########################################################################
-.streamlit/
+#.streamlit/
 !e2e_playwright/.streamlit/
 lib/streamlit/static
 streamlit-storage
